--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -445,4 +445,6 @@
     <string name="up_load_success">上传成功！</string>
     <string name="up_load_cancel">取消上传！</string>
     <string name="download_of_mine">我的下载</string>
+
+    <string name="relogin">登陆过期，请重新登陆</string>
 </resources>
